--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 moviepy==1.0.3
-speechRecognition==3.8.1
-transformers==4.21.1
-torch==1.12.1
-streamlit==1.12.0
+SpeechRecognition==3.10.4
+transformers==4.44.0
+torch>=2.0.0
+streamlit>=1.28.0
 ffmpeg-python==0.2.0
-yt-dlp==2022.10.17
+yt-dlp>=2024.8.0
+numpy<2.0.0
