--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ transformers==4.21.1
 torch==1.12.1
 streamlit==1.12.0
 ffmpeg-python==0.2.0
-yt-dlp==2022.10.17
+yt-dlp==2023.12.30
+pydub==0.25.1
+numpy==1.23.5
